--- a/WebAppRezeptSammlungMVC/Views/Zutats/Details.cshtml
+++ b/WebAppRezeptSammlungMVC/Views/Zutats/Details.cshtml
@@ -26,13 +26,13 @@
             @Html.DisplayNameFor(model => model.Rezept)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Rezept.Id)
+            @Html.DisplayFor(model => model.Rezept.Bezeichnung)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Lebensmittel)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Lebensmittel.Id)
+            @Html.DisplayFor(model => model.Lebensmittel.Bezeichnung)
         </dd>
     </dl>
 </div>
