--- a/WebAppRezeptSammlungMVC/Views/Zutats/Create.cshtml
+++ b/WebAppRezeptSammlungMVC/Views/Zutats/Create.cshtml
@@ -13,11 +13,11 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="RezeptId" class="control-label"></label>
+                <label asp-for="RezeptId" class="control-label">Rezept</label>
                 <select asp-for="RezeptId" class ="form-control" asp-items="ViewBag.RezeptId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="LebensmittelId" class="control-label"></label>
+                <label asp-for="LebensmittelId" class="control-label">Lebensmittel</label>
                 <select asp-for="LebensmittelId" class ="form-control" asp-items="ViewBag.LebensmittelId"></select>
             </div>
             <div class="form-group">
